mobile first course

--- a/004_azure/index.html
+++ b/004_azure/index.html
@@ -207,61 +207,61 @@
       <div class="lt-container">
         <div class="lt-container-item">
           <div class="icon-small">
-            <img width="32" height="32" src="./img/python.svg" alt="" />
+            <img src="./img/python.svg" alt="" />
           </div>
           <a href="#">Python</a>
         </div>
         <div class="lt-container-item">
           <div class="icon-small">
-            <img width="32" height="32" src="./img/net.svg" alt="" />
+            <img src="./img/net.svg" alt="" />
           </div>
           <a href="#">.NET</a>
         </div>
         <div class="lt-container-item">
           <div class="icon-small">
-            <img width="32" height="32" src="./img/js.svg" alt="" />
+            <img src="./img/js.svg" alt="" />
           </div>
           <a href="#">JavaScript</a>
         </div>
         <div class="lt-container-item">
           <div class="icon-small">
-            <img width="32" height="32" src="./img/java.svg" alt="" />
+            <img src="./img/java.svg" alt="" />
           </div>
           <a href="#">Java</a>
         </div>
         <div class="lt-container-item">
           <div class="icon-small">
-            <img width="32" height="32" src="./img/go.svg" alt="" />
+            <img src="./img/go.svg" alt="" />
           </div>
           <a href="#">Go</a>
         </div>
         <div class="lt-container-item">
           <div class="icon-small">
-            <img width="32" height="32" src="./img/rest.svg" alt="" />
+            <img src="./img/rest.svg" alt="" />
           </div>
           <a href="#">REST API</a>
         </div>
         <div class="lt-container-item">
           <div class="icon-small">
-            <img width="32" height="32" src="./img/powershell.svg" alt="" />
+            <img src="./img/powershell.svg" alt="" />
           </div>
           <a href="#">Azure PowerShell</a>
         </div>
         <div class="lt-container-item">
           <div class="icon-small">
-            <img width="32" height="32" src="./img/cli.svg" alt="" />
+            <img src="./img/cli.svg" alt="" />
           </div>
           <a href="#">Azure CLI</a>
         </div>
         <div class="lt-container-item">
           <div class="icon-small">
-            <img width="32" height="32" src="./img/arm.svg" alt="" />
+            <img src="./img/arm.svg" alt="" />
           </div>
           <a href="#">ARM Templates</a>
         </div>
         <div class="lt-container-item">
           <div class="icon-small">
-            <img width="32" height="32" src="./img/jenkins.svg" alt="" />
+            <img src="./img/jenkins.svg" alt="" />
           </div>
           <a href="#">Jenkins</a>
         </div>
