--- a/012_brad_css/01_edge_ledger/index.html
+++ b/012_brad_css/01_edge_ledger/index.html
@@ -3,22 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="stylesheet" href="css/utilities.css" />
-    <link rel="stylesheet" href="css/style.css" />
     <script
       src="https://kit.fontawesome.com/70db74410b.js"
       crossorigin="anonymous"
     ></script>
-    <title>Welcome To EdgeLedger</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/utilities.css" />
+    <title>Welcome to EdgeLedger</title>
   </head>
   <body id="home">
     <header class="hero">
-      <div class="navbar" id="navbar">
+      <div id="navbar" class="navbar">
         <h1 class="logo">
-          <span class="text-primary"
-            ><i class="fas fa-book-open"></i>EdgeLedger</span
-          >
+          <span class="text-primary"><i class="fas fa-book-open"></i>Edge</span
+          >Ledger
         </h1>
         <nav>
           <ul>
@@ -39,7 +37,7 @@
       </div>
     </header>
     <main>
-      <!-- About: Icons -->
+      <!-- About : Icons -->
       <section id="about" class="icons bg-light">
         <div class="flex-items">
           <div>
@@ -47,8 +45,8 @@
             <div>
               <h3>Investment Banking</h3>
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,
-                unde.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Aspernatur, rem.
               </p>
             </div>
           </div>
@@ -57,8 +55,8 @@
             <div>
               <h3>Portfolio Manager</h3>
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,
-                unde.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Aspernatur, rem.
               </p>
             </div>
           </div>
@@ -67,13 +65,173 @@
             <div>
               <h3>Tax & Custodial</h3>
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,
-                unde.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Aspernatur, rem.
               </p>
             </div>
           </div>
         </div>
       </section>
+
+      <!-- About : Solutions -->
+      <section class="solutions flex-columns">
+        <div class="row">
+          <div class="column">
+            <div class="column-1">
+              <img src="img/home/people.jpg" alt="" />
+            </div>
+          </div>
+          <div class="column">
+            <div class="column-2 bg-primary">
+              <h4>What you are looking for</h4>
+              <h2>We provide the spoke solutions</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Recusandae quo molestiae repellendus a praesentium harum odio
+                incidunt. Culpa iusto repudiandae laboriosam dolor hic eius ut,
+                dolorum accusantium voluptates quam reprehenderit!
+              </p>
+              <a href="#" class="btn btn-outline">
+                <i class="fas fa-chevron"></i>Read More
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Cases -->
+      <section id="cases" class="cases flex-grid section-padding">
+        <header class="section-header">
+          <h4>This is what we do</h4>
+          <h2>Business Cases</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum,
+            ullam!
+          </p>
+        </header>
+        <div class="row">
+          <div class="column">
+            <img src="img/cases/cases1.jpg" alt="" />
+            <img src="img/cases/cases2.jpg" alt="" />
+          </div>
+          <div class="column">
+            <img src="img/cases/cases3.jpg" alt="" />
+            <img src="img/cases/cases4.jpg" alt="" />
+          </div>
+          <div class="column">
+            <img src="img/cases/cases5.jpg" alt="" />
+            <img src="img/cases/cases6.jpg" alt="" />
+          </div>
+          <div class="column">
+            <img src="img/cases/cases7.jpg" alt="" />
+            <img src="img/cases/cases8.jpg" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <!-- Blog-->
+      <section id="blog" class="blog flex-columns flex-reverse">
+        <div class="row">
+          <div class="column">
+            <div class="column-1">
+              <img src="img/home/blog.jpg" alt="" />
+            </div>
+          </div>
+          <div class="column">
+            <div class="column-2 bg-secondary">
+              <h4>July 15 2020</h4>
+              <h2>Blog Post One</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Recusandae quo molestiae repellendus a praesentium harum odio
+                incidunt. Culpa iusto repudiandae laboriosam dolor hic eius ut,
+                dolorum accusantium voluptates quam reprehenderit!
+              </p>
+              <a href="#" class="btn btn-outline">
+                <i class="fas fa-chevron"></i>Read Our Blog
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Team -->
+      <section id="team" class="team cases section-padding">
+        <header class="section-header">
+          <h4>Who we are</h4>
+          <h2>Our Professional Team</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum,
+            ullam!
+          </p>
+        </header>
+        <div class="flex-items">
+          <div>
+            <img src="img/team/person1.jpg" alt="" />
+            <h4>John Doe</h4>
+            <p>President</p>
+          </div>
+          <div>
+            <img src="img/team/person2.jpg" alt="" />
+            <h4>Jane Doe</h4>
+            <p>Vice President</p>
+          </div>
+          <div>
+            <img src="img/team/person3.jpg" alt="" />
+            <h4>Steve Smith</h4>
+            <p>Marketing Head</p>
+          </div>
+        </div>
+      </section>
+      <!-- Contact -->
+      <section id="contact" class="contact flex-columns">
+        <div class="row">
+          <div class="column">
+            <div class="column-1">
+              <img src="img/home/contact.jpg" alt="" />
+            </div>
+          </div>
+          <div class="column">
+            <div class="column-2 bg-light">
+              <h2>Request Callback</h2>
+              <form class="callback-form">
+                <div class="form-control">
+                  <label for="name"></label>
+                  <input type="text" id="name" name="name" placeholder="Name" />
+                </div>
+                <div class="form-control">
+                  <label for="email"></label>
+                  <input
+                    type="email"
+                    id="email"
+                    name="email"
+                    placeholder="Email"
+                  />
+                </div>
+                <div class="form-control">
+                  <label for="phone"></label>
+                  <input
+                    type="text"
+                    id="phone"
+                    name="phone"
+                    placeholder="Phone"
+                  />
+                </div>
+                <input type="submit" value="Send" id="submit" class="btn" />
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="footer bg-dark">
+      <div class="social">
+        <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+        <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+        <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
+        <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+      </div>
+      <p>Copyright &copy; 2020 EdgeLedger</p>
+    </footer>
   </body>
 </html>
