Yelp website till section 4

--- a/012_brad_css/01_edge_ledger/index.html
+++ b/012_brad_css/01_edge_ledger/index.html
@@ -147,7 +147,7 @@
                 incidunt. Culpa iusto repudiandae laboriosam dolor hic eius ut,
                 dolorum accusantium voluptates quam reprehenderit!
               </p>
-              <a href="#" class="btn btn-outline">
+              <a href="blog.html" class="btn btn-outline">
                 <i class="fas fa-chevron"></i>Read Our Blog
               </a>
             </div>
