--- a/013_yelp/index.html
+++ b/013_yelp/index.html
@@ -184,7 +184,7 @@
       </section>
 
       <!-- Local and Official Yelp -->
-      <section class="local-offical">
+      <section class="local-official">
         <div class="content-align">
           <div class="local-official-flex">
             <div class="local">
@@ -226,6 +226,119 @@
                 </div>
               </div>
               <h5>See all events</h5>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Review & recent collections -->
+      <section class="rod-recent">
+        <div class="content-align">
+          <div class="rod-recent-flex">
+            <div class="rod-parent">
+              <h2>Review of the Day</h2>
+              <div class="rod">
+                <div class="rate-profile">
+                  <img src="./img/rod/1.jpg" alt="" />
+                  <ul>
+                    <li style="color: #0073bb;">Lori L.</li>
+                    <li>
+                      <i class="fas fa-user-friends"></i> 2240&nbsp;&nbsp;
+                      <i class="fas fa-star"></i> 617
+                    </li>
+                    <li>
+                      Wrote a review for
+                      <span style="color: #0073bb;">Boilery</span>
+                    </li>
+                  </ul>
+                </div>
+                <div class="banner">
+                  <span>Review of the Day</span>
+                  <img src="./img/rod/2.png" alt="" />
+                </div>
+                <div class="user-rating">
+                  <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <span>12/22/2019</span>
+                  </div>
+                </div>
+                <div class="user-matter">
+                  I was able to stop by The Boilery with a couple friends on a
+                  chilly winter night, and despite the longer-than-normal trek
+                  for me, was looking forward to trying their extensive seafood
+                  menu. As the name of the restaurant suggests, their focus is
+                  on seafood boils, but with several other preparations and
+                  non-seafood options for those who aren't as keen on it. The
+                  space is located right off of the 96th St 1/2/3 and has a...
+                  <span style="color: #0073bb;">Continue reading</span>
+                </div>
+              </div>
+              <h5>Read previous reviews</h5>
+            </div>
+            <div class="recent-collection">
+              <h2>Recent</h2>
+              <div class="recent-collection-container">
+                <div class="recent-collection-item">
+                  <img src="./img/recent-collection/1.jpg" alt="" />
+                  <ul>
+                    <li style="color: #0073bb; font-weight: 700;">
+                      <span>NYC</span>
+                    </li>
+                    <li><br /><br /></li>
+                    <li style="color: #999;">
+                      90 Places - By <span style="color: #0073bb;">Kelly</span>
+                    </li>
+                  </ul>
+                </div>
+                <div class="recent-collection-item">
+                  <img src="./img/recent-collection/2.jpg" alt="" />
+                  <ul>
+                    <li style="color: #0073bb; font-weight: 700;">
+                      Tacos in Brookly
+                    </li>
+                    <li>
+                      They’re fun, they’re crazy delicious.
+                    </li>
+                    <li style="color: #999;">
+                      10 Places - By
+                      <span style="color: #0073bb;">Moriene</span>
+                    </li>
+                  </ul>
+                </div>
+                <div class="recent-collection-item">
+                  <img src="./img/recent-collection/3.jpg" alt="" />
+                  <ul>
+                    <li style="color: #0073bb; font-weight: 700;">
+                      New York
+                    </li>
+                    <li><br /><br /></li>
+                    <li style="color: #999;">
+                      10 Places - By
+                      <span style="color: #0073bb;">Bay B.</span>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <h5>Browse more collections</h5>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="recent-activity">
+        <div class="content-align">
+          <h2>Recent Activity</h2>
+          <div class="recent-activity-container">
+            <div class="recent-activity-card">
+              <div class="card-user">
+                <img src="img/recent-activity/user/1.jpg" alt="" />
+                <ul>
+                  <li>Jando S.</li>
+                  <li>Added 2 photos</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
