yelp desktop view completed

--- a/013_yelp/index.html
+++ b/013_yelp/index.html
@@ -335,14 +335,182 @@
               <div class="card-user">
                 <img src="img/recent-activity/user/1.jpg" alt="" />
                 <ul>
-                  <li>Jando S.</li>
+                  <li style="color: #0073bb; font-weight: 700;">Jando S.</li>
                   <li>Added 2 photos</li>
                 </ul>
               </div>
+              <div class="photo-section">
+                <span style="color: #0073bb; font-weight: 700;"
+                  >Sunnyside Pizza</span
+                >
+                <div class="two-pizzas">
+                  <div class="pizza-box">
+                    <img src="./img/recent-activity/food/1.jpg" alt="" />
+                    <div class="like">
+                      <i class="far fa-thumbs-up"></i> Like
+                    </div>
+                  </div>
+                  <div style="margin-left: 5px;" class="pizza-box">
+                    <img src="./img/recent-activity/food/1.jpg" alt="" />
+                    <div class="like">
+                      <i class="far fa-thumbs-up"></i> Like
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="recent-activity-card">
+              <div class="card-user">
+                <img src="img/recent-activity/user/2.jpg" alt="" />
+                <ul>
+                  <li style="color: #0073bb; font-weight: 700;">Monique S.</li>
+                  <li>Wrote a review</li>
+                </ul>
+              </div>
+              <div class="shake-img">
+                <img src="./img/recent-activity/food/3.jpg" alt="" />
+                <span style="color: #0073bb; font-weight: 700;"
+                  >Chocolate Michel Cluizel</span
+                >
+              </div>
+              <div class="shake-review">
+                <ul class="shake-rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </ul>
+                Great customer service! Sales associate only allowing 1 customer
+                in at a time. Masks are required to be served. I grabbed tea
+                with a few chocolate bars since they are having a buy one get
+                one free pro
+                <span style="color: #0073bb;">Continue reading</span>
+              </div>
+              <div class="rate-icons">
+                <i class="far fa-lightbulb"></i>
+                <i class="far fa-grin-beam"></i>
+                <i class="far fa-smile"></i>
+              </div>
+            </div>
+            <div class="recent-activity-card">
+              <div class="card-user">
+                <img src="img/recent-activity/user/3.jpg" alt="" />
+                <ul>
+                  <li style="color: #0073bb; font-weight: 700;">Tom G.</li>
+                  <li>Added 1 photo</li>
+                </ul>
+              </div>
+              <span style="color: #0073bb; font-weight: 700;"
+                >Roosevelt Island Tramway</span
+              >
+              <img src="./img/recent-activity/food/2.jpg" alt="" />
+              <div class="sub-like"><i class="far fa-thumbs-up"></i> Like</div>
+            </div>
+          </div>
+          <h5>
+            <i class="fas fa-chevron-down"></i> Show more activity in New York
+          </h5>
+        </div>
+      </section>
+      <section class="categories">
+        <div class="content-align">
+          <h2>Browse Business by Category</h2>
+          <div class="categories-flex">
+            <div class="flex-item">
+              <img src="./img/browse/1.png" alt="" />
+              <span>Restaurants</span>
+            </div>
+            <div class="flex-item">
+              <img src="./img/browse/2.png" alt="" />
+              <span>Shopping</span>
+            </div>
+            <div class="flex-item">
+              <img src="./img/browse/3.png" alt="" />
+              <span>Nightlife</span>
+            </div>
+            <div class="flex-item">
+              <img src="./img/browse/4.png" alt="" />
+              <span>Active Life</span>
+            </div>
+            <div class="flex-item">
+              <img src="./img/browse/5.png" alt="" />
+              <span>Beauty & Spas</span>
+            </div>
+            <div class="flex-item">
+              <img src="./img/browse/6.png" alt="" />
+              <span>Automotive</span>
+            </div>
+            <div class="flex-item">
+              <img src="./img/browse/7.png" alt="" />
+              <span>Home Services</span>
+            </div>
+            <div class="flex-item">
+              <img src="./img/browse/8.png" alt="" />
+              <span>More Categories</span>
             </div>
           </div>
         </div>
       </section>
+      <section class="mobile-apps">
+        <div class="content-align">
+          <h2>Yelp Mobile Apps</h2>
+         <div class="mobile-apps-flex">
+           <div class="mobile-apps-flex-item">
+             <h7>iPhone, iPad and <i class="fab fa-apple"></i> Watch</h7><br>
+             <img src="./img/mobile-apps/1.png" alt="">
+           </div>
+           <div class="mobile-apps-flex-item">
+             <h7>Android</h7><br>
+             <img src="./img/mobile-apps/2.png" alt="">
+           </div>
+         </div>
+      </section>
     </main>
+    <footer>
+      <ul>
+        <li>About</li>
+        <li>About Yelp</li>
+        <li>Careers</li>
+        <li>Investor Relations</li>
+        <li>Content Guidelines</li>
+        <li>Terms of Service</li>
+        <li>Privacy Policy</li>
+        <li>Ad Choices</li>
+      </ul>
+      <ul>
+        <li>Discover</li>
+        <li>Yelp Project Cost Guides</li>
+        <li>Collections</li>
+        <li>Talk</li>
+        <li>Events</li>
+        <li>The Local Yelp</li>
+        <li>Yelp Blog</li>
+        <li>Support</li>
+        <li>Yelp Mobile</li>
+        <li>Developers</li>
+        <li>RSS</li>
+      </ul>
+      <ul>
+        <li>Yelp for Business</li>
+        <li>Claim your Business Page</li>
+        <li>Advertise on Yelp</li>
+        <li>Yelp for Restaurant Owners</li>
+        <li>Table Management</li>
+        <li>Business Success Stories</li>
+        <li>Business Support</li>
+        <li>Yelp Blog for Business</li>
+      </ul>
+      <ul>
+        <li>Languages</li>
+        <li>English</li>
+        <li>Countries</li>
+        <li>United States</li>
+      </ul>
+    </footer>
+    <div class="footer-image">
+      <img src="./img/footer.png" alt=""><br>
+      <span>Copyright © 2004–2020 Yelp Inc. Yelp, <img src="./img/yelp.png" alt="">, <img src="./img/yelp1.png" alt=""> and related marks are registered trademarks of Yelp.</span>
+    </div>
   </body>
 </html>
