yelp desktop view completed

--- a/013_yelp/index.html
+++ b/013_yelp/index.html
@@ -29,7 +29,23 @@
           <a href="#"><img src="img/logo1.png" alt="" /></a>
         </div>
         <div class="search">
-          <input type="text" />
+          <div class="search-box">
+            <div class="search-field">
+              <div class="search-left">
+                <label for="find">Find</label>
+                <input
+                  type="text"
+                  id="find"
+                  placeholder="burgers, barbers, spas, handymen"
+                />
+              </div>
+              <div class="search-right">
+                <label for="near">Near</label>
+                <input type="text" id="near" placeholder="San Francisco, CA" />
+              </div>
+            </div>
+            <div class="search-btn"><i class="fas fa-search"></i></div>
+          </div>          
           <ul>
             <li>
               <a href=""><i class="fas fa-wrench"></i> Plumbers</a>
@@ -48,13 +64,13 @@
         <div class="header-writing">
           <div class="header-writing-container">
             <h5>Yelp is committed to supporting the Black community</h5>
-            <p>
+            <p style="margin-top: 5px;margin-bottom: 20px;">
               As part of our ongoing efforts, the Yelp Foundation is donating
               $500,000 to the Equal Justice Initiative and the NAACP Legal
               Defense Fund. We are also developing tools in support of
               Black-owned businesses.
             </p>
-            <a href="">Learn More</a>
+            <a href="#">Learn More</a>
           </div>
         </div>
       </div>
