yelp and youtube css

--- a/012_youtube_css/0001_input_animation/index.html
+++ b/012_youtube_css/0001_input_animation/index.html
@@ -8,10 +8,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap"
       rel="stylesheet"
     />
-    <title>Input Animation</title>
+    <title>Modern Input Animation</title>
   </head>
   <body>
-    <h1>Animation Input</h1>
+    <h1>Modern Animation Input</h1>
     <div class="form">
       <input type="text" name="name" autocomplete="off" required />
       <label for="name" class="label-name">
