--- a/014_amazon/index.html
+++ b/014_amazon/index.html
@@ -11,17 +11,132 @@
     <title>Amazon</title>
   </head>
   <body>
-    <header>
+    <header class="nav">
       <div class="nav-belt">
-        <div class="nav-left"></div>
-        <div class="input-container">
-          <div class="all"></div>
-          <div class="input">
-            <input type="text" />
+        <div class="nav-left">
+          <div class="hamburger-container">
+            <i class="hamburger"></i>
           </div>
-          <div class="search-logo"></div>
+          <div class="nav-logo">
+            <div class="nav-logo-photo"></div>
+            <div class="nav-logo-location">.in</div>
+          </div>
         </div>
-        <div class="nav-right"></div>
+        <div class="nav-input">
+          <div class="nav-input-box">
+            <div class="nav-input-select">
+              <select name="" id="">
+                <option selected="selected">All</option>
+                <option>Deals</option>
+                <option>Alexa Skills</option>
+                <option>Amazon Devices</option>
+                <option>Amazon Fashion</option>
+                <option>Amazon Pantry</option>
+                <option>Appliances</option>
+                <option>Apps &amp; Games</option>
+                <option>Baby</option>
+                <option>Beauty</option>
+                <option>Books</option>
+                <option>Car &amp; Motorbike</option>
+                <option>Clothing &amp; Accessories</option>
+                <option>Collectibles</option>
+                <option>Computers &amp; Accessories</option>
+                <option>Electronics</option>
+                <option>Furniture</option>
+                <option>Garden &amp; Outdoors</option>
+                <option>Gift Cards</option>
+                <option>Grocery &amp; Gourmet Foods</option>
+                <option>Health &amp; Personal Care</option>
+                <option>Home &amp; Kitchen</option>
+                <option>Industrial &amp; Scientific</option>
+                <option>Jewellery</option>
+                <option>Kindle Store</option>
+                <option>Luggage &amp; Bags</option>
+                <option>Luxury Beauty</option>
+                <option>Movies &amp; TV Shows</option>
+                <option>Music</option>
+                <option>Musical Instruments</option>
+                <option>Office Products</option>
+                <option>Pet Supplies</option>
+                <option>Prime Video</option>
+                <option>Shoes &amp; Handbags</option>
+                <option>Software</option>
+                <option>Sports, Fitness &amp; Outdoors</option>
+                <option>Tools &amp; Home Improvement</option>
+                <option>Toys &amp; Games</option>
+                <option>Under ₹500</option>
+                <option>Video Games</option>
+                <option>Watches</option>
+              </select>
+            </div>
+            <input type="text" />
+            <div class="search-logo">
+              <i class="fas fa-search"></i>
+            </div>
+          </div>
+        </div>
+        <div class="nav-right">
+          <div class="flag-container">
+            <div class="indian-flag"></div>
+            <i class="fas fa-caret-down"></i>
+          </div>
+          <div class="hello-sign-in">
+            <span class="nav-line-1">Hello, Sign In</span>
+            <span class="nav-line-2"
+              >Account & Lists <i class="fas fa-caret-down"></i
+            ></span>
+          </div>
+          <div class="hello-sign-in">
+            <span class="nav-line-1">Returns</span>
+            <span class="nav-line-2"
+              >& Orders <i class="fas fa-caret-down"></i
+            ></span>
+          </div>
+          <div class="hello-sign-in">
+            <span class="nav-line-1">Try</span>
+            <span class="nav-line-2"
+              >Prime <i class="fas fa-caret-down"></i
+            ></span>
+          </div>
+          <div class="nav-cart-container">
+            <span class="nav-cart-line-1"></span>
+            <span class="nav-cart-line-2">Cart</span>
+            <span class="nav-cart-icon"></span>
+            <span class="nav-cart-count nav-cart-0">0</span>
+          </div>
+        </div>
+      </div>
+      <div class="nav-main">
+        <div class="hello-address">
+          <i class="fas fa-map-marker-alt"></i>
+          <ul>
+            <li class="nav-line-1">Hello</li>
+            <li class="nav-line-2">Select you address</li>
+          </ul>
+        </div>
+        <ul class="nav-main-ul nav-line-1">
+          <li>Mobiles</li>
+          <li>Best Sellers</li>
+          <li>Today's Deals</li>
+          <li>Computer</li>
+          <li>Pantry</li>
+          <li>Books</li>
+          <li>New Releases</li>
+          <li>Amazon Pay</li>
+          <li>Gift Ideas</li>
+          <li>Customer Service</li>
+          <li>Sell</li>
+        </ul>
+        <div class="download-banner">
+          <img src="./download_app.jpg" alt="" />
+        </div>
+      </div>
+      <div class="nav-subnav">
+        <ul>
+          <li>Fire TV Apps</li>
+          <li>Your Apps & Subscriptions</li>
+          <li>Help</li>
+        </ul>
       </div>
     </header>
     <script src="app.js"></script>
