product name, price, etc

--- a/014_amazon/index.html
+++ b/014_amazon/index.html
@@ -258,7 +258,112 @@
           </li>
         </ul>
       </div>
-      <div class="product-container"></div>
+      <div class="product-container">
+        <div class="product-col-2">
+          <div class="product-col-2-row-1">
+            <h1>
+              RUNMUS Stereo Gaming Headset for PS4, Xbox One, Nintendo Switch,
+              PC, PS3, Mac, Laptop, Over Ear Headphones PS4 Headset Xbox One
+              Headset with Surround Sound, LED Light & Noise Canceling
+              Microphone
+            </h1>
+            <h4>by <a href="">RUNMUS</a></h4>
+            <div class="rating-container">
+              <span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star-half-full checked"></span>
+              </span>
+              <span class="rating-down">
+                <span class="fas fa-chevron-down"></span>
+              </span>
+              <span class="rating-no"> <a href="">14,977 ratings</a> </span>
+            </div>
+          </div>
+          <div class="product-col-2-row-2">
+            <table>
+              <tr style="color: #555;">
+                <td>M.R.P.:</td>
+                <td>
+                  <span style="text-decoration: line-through;"
+                    >₹ 13,260.00</span
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td style="color: #555;">Price:</td>
+                <td>
+                  <span style="color: #b12704; font-size: 20px;"
+                    >₹ 9,337.00</span
+                  >
+                  + ₹ 100.00 Delivery charge
+                </td>
+              </tr>
+              <tr>
+                <td style="color: #555;">You Save:</td>
+                <td style="color: #b12704;">₹ 3,923.00 (30%)</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td>Inclusive of all taxes</td>
+              </tr>
+            </table>
+            <div class="delivery-by">
+              <span>Delivery By: <b>Aug 5 - 12</b><a href=""> Details</a></span>
+            </div>
+            <div class="emi-options">
+              <span
+                ><b>EMI</b> starts at ₹440. No cost EMI available
+                <a href="">EMI Options</a>
+              </span>
+            </div>
+            <div class="replacement-warranty">
+              <div class="replacement-container">
+                <div class="replacement-img">
+                  <img src="./img/return.png" alt="" />
+                </div>
+                <span
+                  ><a href=""
+                    >10 Days <br />
+                    Replacement</a
+                  ></span
+                >
+              </div>
+
+              <div class="warranty-container">
+                <div class="warranty-img">
+                  <img src="./img/warranty.png" alt="" />
+                </div>
+                <span
+                  ><a href=""
+                    >Warranty <br />
+                    Policy</a
+                  ></span
+                >
+              </div>
+            </div>
+          </div>
+          <div class="product-col-2-row-3">
+            <h3>Usually dispatched in 6 to 10 days</h3>
+            <span>Sold and fulfilled by <a href="">Cart2India Online</a></span>
+            <h4>
+              <a href=""
+                >New (2) from
+                <span style="color: #b12704;">₹ 9,337.00 </span></a
+              >
+              + ₹ 100.00 Shipping
+            </h4>
+          </div>
+          <div class="product-col-2-row-4">
+            <h5>Lowest price ever on JK copier paper</h5>
+            <h5><a href="">Sign in/Create a free business account </a></h5>
+          </div>
+        </div>
+        <div class="product-col-2"></div>
+        <div class="product-col-3"></div>
+      </div>
     </main>
     <script src="app.js"></script>
   </body>
